# LeagueManagementStudio

./: CMakeLists.txt  DialogPronostic.cpp  DialogPronostic.h  DialogPronostic.ui  LMS.pro  LMS.pro.user.0035be3  LMS.pro.user.0035be3.xml  LMS.pro.user.6ba8f00.xml  LMS.pro.user.8415466  PronosticDialog.cpp  PronosticDialog.h  PronosticDialog.ui  PronosticPage.ui  button.ui  connection.cpp  connection.h  custombutton.cpp  custombutton.h  customtextinput.cpp  customtextinput.h  dialog.cpp  dialog.h  dialog.ui  employee.cpp  employee.h  employeepage.cpp  employeepage.h  employeepage.ui  employeepage.ui.autosave  employeepage_copy.ui  employeeupdateform.cpp  employeeupdateform.h  employeeupdateform.ui  faceRecogScript.py  homepage.cpp  homepage.h  homepage.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+32 more)
